infra/k8s-dev/ingress-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
    nginx.ingress.kubernetes.io/enable-cors: "true"
spec:
  rules:
    - host: dev.ranjod.com
      http:
        paths:
          - path: /auth-api/?(.*)
            backend:
              serviceName: auth-srv
              servicePort: 3000
          - path: /data-api/?(.*)
            backend:
              serviceName: data-srv
              servicePort: 3000
          - path: /assets-api/?(.*)
            backend:
              serviceName: assets-srv
              servicePort: 3000
          - path: /?(.*)
            backend:
              serviceName: client-srv
              servicePort: 8080
    - host: dash.ranjod.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: dashboard-srv
              servicePort: 3000
